apps/medium-place/gitea/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
  namespace: medium-place
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: gitea
    app.kubernetes.io/component: server
    app.kubernetes.io/version: 1.16.8
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
      app.kubernetes.io/part-of: gitea
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: http://vault.infrastructure.svc.cluster.local:8200
        vault.security.banzaicloud.io/vault-role: gitea        
        diun.enable: "true"
        diun.regopt: docker.io
        diun.watch_repo: "true"
        diun.include_tags: "^\\d+\\.\\d+\\.\\d+$"
      labels:
        app.kubernetes.io/name: gitea
        app.kubernetes.io/part-of: gitea
        app.kubernetes.io/component: server
        app.kubernetes.io/version: 1.16.8
    spec:
      serviceAccountName: gitea
      securityContext:
        fsGroup: 1001
      containers:
        - name: gitea
          image: gitea/gitea:1.16.8-rootless
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            readOnlyRootFilesystem: false
          ports:
            - name: http
              protocol: TCP
              containerPort: 3000
            - name: ssh
              protocol: TCP
              containerPort: 2222
          volumeMounts:
            - name: data
              mountPath: /var/lib/gitea
              subPath: var/lib/gitea
            - name: data
              mountPath: /etc/gitea
              subPath: etc/gitea
          resources:
            requests:
              cpu: 16m
              memory: 256Mi
            limits:
              cpu: 64m
              memory: 384Mi
  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: medium-place
        labels:
          app.kubernetes.io/name: gitea
          app.kubernetes.io/part-of: gitea
          app.kubernetes.io/component: server
      spec:
        storageClassName: scw-bssd-retain
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
