apps/medium-place/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: medium-place
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: gitea
    app.kubernetes.io/component: server
    app.kubernetes.io/version: 1.16.8
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: true
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - forge.medium.place
      secretName: forge.medium.place-tls
  rules:
    - host: forge.medium.place
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gitea
                port:
                  name: http
